test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_while_loop.plx
pub fn f(none) none {
    return none
}
pub fn main(none) i32 {
    i: i32 = false
    #  void expressions are non-scalar, so they can't be used as controlling conditions
    loop while cast<none>(10) {
        i = i + 1
    }
    return 0
}
